
=item *

Alias expansion is escapable using backslash:
  alias ls='ls --color'
  \ls

=item *

The sequence ESC-h is now per default bound to the new readline function
"run-help" which will display any help about the current input line it
can find. (works only in Term::ReadLine::Gnu)

=item *

It's now possible to bind simple commands with C<&&> and C<||> like
in a normal shell.

=back

=head2 New builtins

=over 4

=item * B<modules>

=item * B<ulimit>

=item * B<printenv>

=item * B<hash>

=item * B<rehash>

=back

=head2 Fixes

=over 4

=item *

Major startup speedup

=item *

There was a small, not very often occurring bug related to the usage of
Env::Array, due to a typo

=item *

Handling of ~ for username expansion should be bug-free now

=item *

The help builtin sometimes returned the wrong help (e.g. C<help set>
returned the help of setenv)

=item *

The parser parsed '&&' as if the user entered '& &&'.

=back

=head2 Cleanups

=over 4

=item *

The package Psh::Job is now in the same file with Psh::Joblist. Psh::Job
stays an object while Psh::Joblist was converted to a procedural interface
as there was no need for OO here.

=item *

The package Psh::Locale::Base was renamed to Psh::Locale, so the Psh::Locale::
tree now only contains valid locales.

=item *

The C<@Psh::mon> and C<@Psh::wday> variables were removed. Please see the
perldoc for Psh::Locale

=item *

Switch to new evaluation strategies system. Please also see README.upgrade

=item *

The builtin B<pshtokenize> was removed as it duplicated code from the
B<debug> strategy.

=back

=head2 Other changes

=over 4

=item *

The comment strategy was removed. Comments are now already recognized and
ignored by the parser.

=item *

A limited version of the B<perlfunc> strategy is now loaded by default.
The old strategy B<perlfunc> was renamed to B<perlfunc_heavy>.

=cut

###############################################################################